# visitor_box

./: .gitignore  CMakeLists.txt  ReadMe.md  animals.cpp  rf_guru.cpp  variant_visitor.cpp
cpp_weekly/: CMakeLists.txt  ep_440.cpp
pikus/: 01_visitor.cpp  02_visitor.cpp  03_visitor.cpp  04_visitor_args.cpp  05_visitor_retval.cpp  06_container_visitor.cpp  07_composite_visitor.cpp  08_serialization_visitor.cpp  09_serialization_visitor.cpp  10_acyclic_visitor.cpp  11_visitor_template.cpp  12_visitor_template.cpp  13_visitor_lambda.cpp  14_visitor_lambda_tuple.cpp  15_acyclic_visitor.cpp  16_acyclic_visitor.cpp  17_acyclic_visitor.cpp  18_static_visitor.cpp  19_serialize_visitor.cpp  20_serialize_visitor.cpp  21_visitor_variant.cpp  22_visitor_variant_lambda.cpp  23_visitor_variants.cpp  CMakeLists.txt  ReadMe.md
