

add_executable(01_visitor 01_visitor.cpp)
add_executable(02_visitor 02_visitor.cpp)
add_executable(03_visitor 03_visitor.cpp)
add_executable(04_visitor 04_visitor_args.cpp)
add_executable(05_visitor 05_visitor_retval.cpp)
add_executable(06_visitor 06_container_visitor.cpp)
add_executable(07_visitor 07_composite_visitor.cpp)
add_executable(08_visitor 08_serialization_visitor.cpp)
add_executable(09_visitor 09_serialization_visitor.cpp)
add_executable(10_visitor 10_acyclic_visitor.cpp)
add_executable(11_visitor 11_visitor_template.cpp)
add_executable(12_visitor 12_visitor_template.cpp)
add_executable(13_visitor 13_visitor_lambda.cpp)
add_executable(14_visitor 14_visitor_lambda_tuple.cpp)
add_executable(15_visitor 15_acyclic_visitor.cpp)
add_executable(16_visitor 16_acyclic_visitor.cpp)
add_executable(17_visitor 17_acyclic_visitor.cpp)
add_executable(18_visitor 18_static_visitor.cpp)
add_executable(19_visitor 19_serialize_visitor.cpp)
add_executable(20_visitor 20_serialize_visitor.cpp)
add_executable(21_visitor 21_visitor_variant.cpp)
add_executable(22_visitor 22_visitor_variant_lambda.cpp)
add_executable(23_visitor 23_visitor_variants.cpp)
